--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </a>
 
           <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
-            <span class="navbar-toggler-icon">Olá</span>
+            <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="nav-principal">
